with out pickup waste module

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Gomi001</string>.
+    <string name="app_name">Gomi</string>.
     <string name="contact_form">Contact Us</string>
     <string name="contact_form_name">Name</string>
     <string name="phone_no">Phone No</string>
@@ -25,5 +25,9 @@
     <string name="save_details"> Post Ad.</string>
     <string name="title_activity_driver_map">Map</string>
     <string name="dump_waste">Dump Waste</string>
+    <string name="start_journey">Start Journey</string>
+    <string name="pick_up_waste">Pick Up waste</string>
+    <string name="Open">open</string>
+    <string name="Close">close</string>
 
 </resources>
